fix menu bug on mobile

--- a/client/stylesheets/_utils.scss
+++ b/client/stylesheets/_utils.scss
@@ -18,7 +18,7 @@ body{
   }
 }
 .content {
-  margin-top: 4 * $base-size;
+  margin-top: 5 * $base-size;
 }
 
 // sumernote
